final commit images

--- a/projects/parkio.html
+++ b/projects/parkio.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Sigmazone Analytics - website</title>
+  <title>Points Africa - website- landing pages</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -38,54 +38,34 @@
         <div class="row">
           <div class="col-lg-12 portfolio-info">
             <br>
-            <h2 style="color:#12d640">Sigmazone Analytics - website2>
+            <h2 style="color:#12d640">Points Africa - website </h2>
             <ul>
-              <li><strong>Tech Stack</strong>: Wordpress,Elementor, PHP.</li>
+              <li><strong>Tech Stack</strong>: Wordpress,Elementor,flutter,nodejs</li>
               <li><strong>Github URL</strong>: <a
-                  href="sigmazone.ca"
+                  href="https://www.pointsafrica.com/"
                   target="_blank">Project
                   Link</a>
               </li>
             </ul>
             <p>
-              The Condominium of the Housing Complex Santa Terezinha has about 918 apartments,
-              however there are only 2 entrances and approximately 800 spaces that are of
-              access to the residents and visitors of the condominium. Considering the above facts,
-              there is an obstacle to controlling the flow of vehicles in an agile and safe way.
+              Retail Coalition Loyalty Program
             </p>
             <p>
-              At all times, vehicles enter and leave the condominium, and the control of
-              how long visiting vehicles stay inside the condominium is difficult to be done.
-              Currently, there are rounds-guys that help in this process, however,
-              management is hampered due to the high flow.
+              An exclusive loyalty network integrated within the growing African mobile payment landscapes
+
             </p>
             <p>
-              ParkIO is a web application, developed with the aim of allowing the entrances
-              of the Condominium of the Santa Terezinha Housing Complex to control the entry
-              and exit of visiting vehicles. Thus, through this application, the condominium
-              administration will be able to verify which vehicles are inside the condominium
-              the longest, occupying the few spaces that the community parking offers.
+              You Earn points for everyday purchases (mobile payments, Gas, Grocery, Pharmacy and other retails).
+              Build your reward options faster by accumulating points
+              Use your points and reward yourself for everyday purchases
             </p>
-            <p>
-              With this application it will be possible to carry out a broader management
-              of the condominium. The administrators will be able to view the list of vehicles,
-              in this way, enabling a precise action on a given problem, the same applies
-              to other users, who using the system correctly, will offer condominium
-              residents a safer, more controlled and agile environment.
-            </p>
-            <p>
-              Members: Guilherme Gabriel, Henrique Monteiro, Tinotenda Mawaro and Victor Boaventura
-              and Vinícius Marini.
-            </p>
-            <p>
-              More information available on GitHub.
-            </p>
-            <div class="mb-2" style="display: flex; justify-content: center;">
+            
+            <!-- <div class="mb-2" style="display: flex; justify-content: center;">
               <iframe width="560" height="315" src="https://www.youtube.com/embed/4wGBQsNt6Cw"
               title="YouTube video player" frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen></iframe>
-            </div>
+            </div> -->
           </div>
         </div>
 
@@ -105,7 +85,7 @@
   <script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="../assets/vendor/venobox/venobox.min.js"></script>
 
-  <!-- Template Main JS File -->
+  <!--  Main JS File -->
   <script src="../assets/js/main.js"></script>
 
 </body>
