--- a/projects/hepagenda.html
+++ b/projects/hepagenda.html
@@ -1,54 +1,61 @@
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-<head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>Jobliss | Employee Management System</title>
+    <meta content="" name="descriptison" />
+    <meta content="" name="keywords" />
 
-  <title>Jobliss | Employee Management System</title>
-  <meta content="" name="descriptison">
-  <meta content="" name="keywords">
+    <!-- Favicons -->
+    <link href="../assets/img/favicon.png" rel="icon" />
+    <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
 
-  <!-- Favicons -->
-  <link href="../assets/img/favicon.png" rel="icon">
-  <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+      rel="stylesheet" />
 
-  <!-- Google Fonts -->
-  <link
-    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-    rel="stylesheet">
+    <!-- Vendor CSS Files -->
+    <link
+      href="../assets/vendor/bootstrap/css/bootstrap.min.css"
+      rel="stylesheet" />
+    <link href="../assets/vendor/icofont/icofont.min.css" rel="stylesheet" />
+    <link href="../assets/vendor/remixicon/remixicon.css" rel="stylesheet" />
+    <link
+      href="../assets/vendor/owl.carousel/assets/owl.carousel.min.css"
+      rel="stylesheet" />
+    <link
+      href="../assets/vendor/boxicons/css/boxicons.min.css"
+      rel="stylesheet" />
+    <link href="../assets/vendor/venobox/venobox.css" rel="stylesheet" />
 
-  <!-- Vendor CSS Files -->
-  <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="../assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-  <link href="../assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-  <link href="../assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="../assets/vendor/venobox/venobox.css" rel="stylesheet">
+    <!-- Template Main CSS File -->
+    <link href="../assets/css/main/style.css" rel="stylesheet" />
+  </head>
 
-  <!-- Template Main CSS File -->
-  <link href="../assets/css/main/style.css" rel="stylesheet">
-
-  
-</head>
-
-<body data-gr-c-s-loaded="true">
-
-  <!-- ======= Portfolio Details ======= -->
-  <main id="main">
-    <div id="portfolio-details" class="portfolio-details">
-      <div class="container">
-
-        <div class="row">
-          <div class="col-lg-12 portfolio-info">
-            <br>
-            <h2 style="color:#12d640">Jobliss |Employee Mangement System</h2>
-            <ul>
-              <li><strong>Tech Stack</strong>: NodeJs, TypeScript,MySQL, VueJs,Tailwind, AWS, Serverless, Cognito, Hasura, Docker, Vuetify.</li>
-              <li><strong>URL</strong>: <a
-                  href="jobblis.com" target="_blank">Project
-                  Link</a>
-              </li>
-              <!-- <li>
+  <body data-gr-c-s-loaded="true">
+    <!-- ======= Portfolio Details ======= -->
+    <main id="main">
+      <div id="portfolio-details" class="portfolio-details">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12 portfolio-info">
+              <br />
+              <h2 style="color: #12d640">Jobliss |Employee Mangement System</h2>
+              <ul>
+                <li>
+                  <strong>Tech Stack</strong>: NodeJs, TypeScript,MySQL,
+                  VueJs,Tailwind, AWS, Serverless, Cognito, Hasura, Docker,
+                  Vuetify.
+                </li>
+                <li>
+                  <strong>URL</strong>:
+                  <a href="https://jobbliss.com/" target="_blank"
+                    >Project Link</a
+                  >
+                </li>
+                <!-- <li>
                 <strong>Certificate URL</strong>: <a
                   href="https://sei.ufmg.br/sei/controlador_externo.php?acao=documento_conferir&id_orgao_acesso_externo=0"
                   target="_blank">Tinotenda Mawaro Project Certificate</a>
@@ -57,44 +64,43 @@
                   <li>CRC code: 3C204496</li>
                 </ul>
               </li> -->
-            </ul>
-            <p>
-              This project specifically aims to develop an application that allows the user to
-              administrator book appointments more efficiently, view appointment schedule,
-              fill in specific data about patients, attach files as well as view
-              and then the patient's history. In this sense, aiming at a better
-              monitoring and understanding of the situation of each one, in addition to facilitating the administration
-              of physicians/system users who work in the clinic.
-            </p>
-            <p>
-              Development of an electronic diary for booking appointments for patients with hepatitis at the hepatitis
-              clinic at Univerisade Federal de Minas Gerais.
-            </p>
-            <p>
-              Volunteer work as Scrum Master, Team Leader Backend and FullStack Developer.
-            </p>
+              </ul>
+              <p>
+                Employee Management system that helps finding past projects or
+                planning future needs; assign projects, delegate hours, source
+                the right skills and track progress with ease.
+              </p>
+              <p>
+                JobBliss walks you through building your talent pool by adding
+                your contractors and freelancers, and existing in-progress work.
+              </p>
+              <p>
+                It Facilitates internal and external team collaboration by
+                easily inviting team leads and managers to access your vetted
+                talent pool, share and manage talent easily, aligning team
+                efforts with total oversight.
+              </p>
+            </div>
           </div>
         </div>
-
       </div>
-    </div><!-- End Portfolio Details -->
-  </main><!-- End #main -->
+      <!-- End Portfolio Details -->
+    </main>
+    <!-- End #main -->
 
-  <!-- Vendor JS Files -->
-  <script async="" src="//www.google-analytics.com/analytics.js"></script>
-  <script src="assets/vendor/jquery/jquery.min.js"></script>
-  <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="../assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-  <script src="../assets/vendor/php-email-form/validate.js"></script>
-  <script src="../assets/vendor/waypoints/jquery.waypoints.min.js"></script>
-  <script src="../assets/vendor/counterup/counterup.min.js"></script>
-  <script src="../assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-  <script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="../assets/vendor/venobox/venobox.min.js"></script>
+    <!-- Vendor JS Files -->
+    <script async="" src="//www.google-analytics.com/analytics.js"></script>
+    <script src="assets/vendor/jquery/jquery.min.js"></script>
+    <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+    <script src="../assets/vendor/php-email-form/validate.js"></script>
+    <script src="../assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+    <script src="../assets/vendor/counterup/counterup.min.js"></script>
+    <script src="../assets/vendor/owl.carousel/owl.carousel.min.js"></script>
+    <script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="../assets/vendor/venobox/venobox.min.js"></script>
 
-  <!-- Template Main JS File -->
-  <script src="../assets/js/main.js"></script>
-
-</body>
-
+    <!--  Main JS File -->
+    <script src="../assets/js/main.js"></script>
+  </body>
 </html>
