--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@
           </a>
           <a
             class="link"
-            href="www.linkedin.com/in/tinotenda-mawaro"
+            href="https://www.linkedin.com/in/tinotenda-mawaro/"
             target="_blank"
           >
             <img
