--- a/links.html
+++ b/links.html
@@ -56,7 +56,7 @@
 
         <a
           class="link"
-          href="www.linkedin.com/in/tinotenda-mawaro"
+          href="https://www.linkedin.com/in/tinotenda-mawaro/"
           target="_blank">
           <img
             class="logo"
@@ -65,23 +65,13 @@
           Linkedin
         </a>
 
-        <!-- <a class="link" href="https://www.youtube.com/channel/UC7-8rt7JfhsmVpe-KAlaLHw" target="_blank">
-        <img class="logo" src="./assets/img/links/youtube.svg" alt="Youtube Logo">
-        Youtube
-      </a> -->
-
-        <!-- <a class="link" href="https://www.instagram.com/lcs2001_/" target="_blank">
-        <img class="logo" src="./assets/img/links/instagram.svg" alt="Instagram Logo">
-        Instagram
-      </a> -->
+       
       </div>
 
       <footer>
         Tinotenda Mawaro
         <p>
           Junior Software engineer
-          <!-- <a href="https://www.pucminas.br/unidade/praca-da-liberdade/ensino/graduacao/Paginas/Engenharia-de-Software.aspx"
-          target="_blank">@PucMinas</a> 📚 -->
         </p>
       </footer>
     </div>
