--- a/index.html
+++ b/index.html
@@ -851,29 +851,29 @@
         <div class="links-container">
           <strong class="description">Getting in touch! 👋</strong>
           <a
-            class="link"
-            href="https://github.com/TinotendaMawaro"
-            target="_blank"
+          class="link"
+          href="https://github.com/TinotendaMawaro"
+          target="_blank"
           >
-            <img
-              class="logo"
-              src="./assets/img/links/github.svg"
-              alt="GitHub Logo"
-            />
-            GitHub
-          </a>
-          <a
-            class="link"
-            href="https://www.linkedin.com/in/tinotenda-mawaro/"
-            target="_blank"
+          <img
+            class="logo"
+            src="./assets/img/links/github.svg"
+            alt="GitHub Logo" />
+          GitHub
+        </a>
+
+        <a
+          class="link"
+          href="https://www.linkedin.com/in/tinotenda-mawaro/"
+          target="_blank"
           >
-            <img
-              class="logo"
-              src="./assets/img/links/linkedin.svg"
-              alt="Linkedin Logo"
+          <img
+            class="logo"
+            src="./assets/img/links/linkedin.svg"
+            alt="Linkedin Logo" 
             />
-            Linkedin
-          </a>
+          Linkedin
+        </a>
           <a
             class="link"
             href="#"
