--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@
 
         <a
           class="link"
-          href="https://www.linkedin.com/in/tinotenda-mawaro/"
+          href="href="https://www.linkedin.com/in/tinotenda-mawaro/"
           target="_blank"
           >
           <img
